mdapioutput/objects/ActivityDocSetting__mdt.object
<CustomObject>
    <description>Mobile setting for displaying promo documents stored in Salesforce Content during visits</description>
    <fields>
        <fullName>ActivityRecordTypeName__c</fullName>
        <label>Activity Record Type API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocumentFolderLabel__c</fullName>
        <description>Custom Label used for the Documents folder name</description>
        <label>Document Folder Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FolderName__c</fullName>
        <label>Folder Unique Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Activity Documents Setting</label>
    <pluralLabel>Activity Documents Settings</pluralLabel>
</CustomObject>